# game-programming-25

./: .gitignore  CMakeLists.txt  README.md  WARP.md  notes.md
exercises/: CMakeLists.txt  E00_introduction.cpp  E02_collisions.cpp  E02_collisions.md  E03_coordinate_systems.cpp  E04_physics.cpp  E05_animation_and_audio.cpp
lib/easings_movement/: easings_movement.h
lib/imgui/: CMakeLists.txt
lib/itu/: itu_unity_include.hpp
